# glosbit

./: .gitignore  CMakeLists.txt  README.md  changelog  org.kde.glosbit.appdata.xml  org.kde.glosbit.desktop
src/: CMakeLists.txt  DictionaryAction.qml  Example.qml  ExampleModel.qml  Main.qml  Messages.sh  ResultDelegate.qml  ResultView.qml  Search.qml  Translation.qml  TranslationModel.qml  Utils.js  desktopmain.qml  dictionaries.js  examples.json  main.cpp  mobilemain.qml  resources.qrc  translation.json
src/android/: AndroidManifest.xml  CMakeLists.txt  README  main.cpp  resources.qrc
src/contents/ui/: Main.qml  ResultDelegate.qml  ResultView.qml  Search.qml  desktopmain.qml  mobilemain.qml
src/plugins/: CMakeLists.txt  GlosbitConfig.cpp  GlosbitConfig.h  qmldir  qmlplugin.cpp
